<resources>
    <string name="app_name">OnlyKats</string>
    <string name="settings">Settings</string>
    <string name="details">Details</string>
    <string name="browse">Browse</string>
    <string name="limit">Limit</string>
    <string name="apply">Apply</string>
    <string name="endpoint">Endpoint</string>
    <string name="kat_name_label">Kat name:</string>
    <string name="kat_lifespan_label">Years</string>
    <string name="home_title">Only Kats</string>
    <string name="home">home</string>
    <string name="back">Back</string>
    <string name="energy_level">Energy Level:</string>
    <string name="shedding_level">Shedding Level:</string>
    <string name="social_needs">Social Needs:</string>
    <string name="lifespan">Lifespan:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="update_kat">Update Kat</string>
    <string name="add">add</string>
    <string name="your_kats">Your Kats</string>
    <string name="update">UPDATE</string>
</resources>